<resources>
    <string name="app_name">airbnb</string>
    <string name="label_github_login_title">GitHub 로그인</string>
    <string name="label_login_skip_title">로그인 하지 않고 진행하기</string>
    <string name="menu_search">검색</string>
    <string name="menu_wish">위시리스트</string>
    <string name="menu_reservation">내 예약</string>
    <string name="home_search_title">어디로 여행하세요</string>
    <string name="home_hero_title">슬기로운 \n자연생활</string>
    <string name="home_hero_description">에어비앤비가 엄선한\n위시리스트를 만나보세요</string>
    <string name="home_hero_btn_title">여행 아이디어 얻기</string>
    <string name="tv_home_recommend_title">어디에서나, 여행은\n살아보는거야!</string>
    <string name="search_bar_hint">어디로 여행하세요?</string>
    <string name="search_near_travel_destination">근처의 인기 여행지</string>
    <string name="checkout_date">-%s</string>
    <string name="erase_btn_title">지우기</string>
    <string name="skip_btn_title">건너뛰기</string>
    <string name="tv_calendar_title">여행일정</string>
    <string name="tv_price_range_title">가격범위</string>
    <string name="price_range_lowest">최저 요금</string>
    <string name="price_range_highest">최고 요금</string>
    <string name="title_activity_person_ragne">PersonRagneActivity</string>
    <string name="label_search_result_super_host">슈퍼호스트</string>
    <string name="accommodation_detail_backspace">accommodation_detail_backspace</string>
    <string name="time_to_destination">차로 %s 거리</string>
    <string name="label_map_btn_text">지도</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_search_condition_location_hint">위치</string>
    <string name="string_search_condition_location">양재동, 서초구, 서울특별시</string>
    <string name="string_search_condition_checkin_checkout_hint">체크인/체크아웃</string>
    <string name="string_search_condition_checkin_checkout">5월23일- 6월10일</string>
    <string name="string_search_condition_price_hint">요금</string>
    <string name="string_search_condition_price">$52000 -$1,000,000</string>
    <string name="string_search_condition_guest_count_hint">인원수</string>
    <string name="string_search_condition_guest_count">성인2, 어린이1, 유아0</string>
    <string name="reservation_checkin">체크인</string>
    <string name="reservation_checkout">체크아웃</string>
    <string name="reservation_guest">인원</string>
    <string name="reservation_button">예약하기</string>
    <string name="reservation_description">예약 확정 전에는 요금이 청구되지 않습니다.</string>
    <string name="reservation_discount">4% 주 단위 요금 할인</string>
    <string name="reservation_clean">청소비</string>
    <string name="reservation_service">서비스</string>
    <string name="reservation_tax">숙박세와 수수료</string>
    <string name="reservation_total">합계</string>
    <string name="reservation_accommodation_price">₩%s x %d 박</string>
    <string name="accommodation_detail_host">호스트 : %s</string>
    <string name="accommodation_detail_view_pager_number">%d/%d</string>
    <string name="accommodation_detail_rating_comments">%s(후기: %d개)</string>
    <string name="accommodation_detail_rooms_detail">최대 인원: %d명, 침실 %d개, 침대 %d개, 욕실 %d개</string>
    <string name="accommodation_detail_one_day_price">₩%s /박</string>
    <string name="accommodation_detail_reservation">예약하기</string>
    <string name="accommodation_detail_input_information">정보 입력 하기</string>
    <string name="accommodation_detail_checkin_checkout">%s - %s</string>
    <string name="accommodation_detail_input_information_description">요금을 확인하려면 날짜 또는 인원수를 입력하세요.</string>
</resources>