<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="condtion"
            type="com.example.airbnb.domain.model.SearchCondition" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.searchResult.SearchConditionFragment">

        <ImageButton
            android:id="@+id/iBtn_information_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="47dp"
            android:background="@drawable/ic_search_backspace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/iBtn_information_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ic_check"
            android:backgroundTint="@color/tab_selector_icon"
            app:layout_constraintBottom_toBottomOf="@id/iBtn_information_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iBtn_information_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_search_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="60dp"
            android:hint="@string/string_search_condition_location_hint"
            app:hintTextAppearance="@style/Caption.Grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iBtn_information_back"
            app:startIconDrawable="@drawable/ic_locationpin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:textAppearance="@style/Subtitle2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_search_checkin_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/string_search_condition_checkin_checkout_hint"
            app:hintTextAppearance="@style/Caption.Grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etl_search_location"
            app:startIconDrawable="@drawable/ic_checkin_checkout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_checkin_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:textAppearance="@style/Subtitle2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_search_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/string_search_condition_price_hint"
            app:hintTextAppearance="@style/Caption.Grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etl_search_checkin_checkout"
            app:startIconDrawable="@drawable/ic_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:textAppearance="@style/Subtitle2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_search_guest_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_guest"
            android:hint="@string/string_search_condition_guest_count_hint"
            app:hintTextAppearance="@style/Caption.Grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etl_search_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_guest_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:textAppearance="@style/Subtitle2" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>