<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.priceRange.PriceRangeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_price_range_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_scale_off_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_information_title"
                style="@style/Overline.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="34dp"
                android:text="@string/tv_price_range_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_information_range_start"
                style="@style/HeadLine6.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_information_title"
                app:layout_constraintTop_toBottomOf="@id/tv_information_title" />

            <TextView
                android:id="@+id/tv_information_range_end"
                style="@style/HeadLine6.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_information_range_start"
                app:layout_constraintTop_toBottomOf="@id/tv_information_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_price_range_header">

            <TextView
                android:id="@+id/tv_price_range_average_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="평균 1박요금은 $원입니다"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.stfalcon.pricerangebar.RangeBarWithChart
                android:id="@+id/rb_price_range_with_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price_range_average_price" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_lowest_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/price_range_lowest"
                app:hintTextAppearance="@style/Caption.Grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rb_price_range_with_chart">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lowest_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="11,000"
                    android:textAppearance="@style/Subtitle2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_highest_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:clickable="false"
                android:hint="@string/price_range_highest"
                app:hintTextAppearance="@style/Caption.Grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etl_lowest_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_highest_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="1,000,000+"
                    android:textAppearance="@style/Subtitle2" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>